Terminal, Terminal Contact

--- a/OctagonPlatform/Views/Partners/Details.cshtml
+++ b/OctagonPlatform/Views/Partners/Details.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h1>@Model.BusinessName Overview</h1>
+<h1>Partner @Model.BusinessName Overview</h1>
 <br />
 <hr />
 <br />
