--- a/OctagonPlatform/Views/Partners/Sections/Users.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Users.cshtml
@@ -45,7 +45,7 @@
         {
             if (!item.Deleted)
             {
-                <tr class="info">
+                <tr  class="active">
                     <td>@item.Partner.BusinessName</td>
                     <td>@item.Name</td>
                     <td>@item.LastName</td>
