--- a/OctagonPlatform/Views/PartnerContacts/Edit.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Edit.cshtml
@@ -10,11 +10,9 @@
 {
     <p class="alert alert-danger">
         All fields are <strong>required.</strong>
+        @ViewBag.Error
+        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
     </p>
-    <p class="alert alert-danger">
-        <strong>@ViewBag.Error</strong>
-    </p>
-    <p>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</p>
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
     @Html.HiddenFor(m => m.PartnerId)
@@ -121,6 +119,9 @@
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/xpopulate")
 }
+
+
 
 
