--- a/OctagonPlatform/Views/PartnerContacts/Index.cshtml
+++ b/OctagonPlatform/Views/PartnerContacts/Index.cshtml
@@ -51,6 +51,7 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id, partnerId = item.PartnerId},
                     new { onclick = "return confirm('Are sure wants to delete?');" })
             </td>
+            <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink("Details", "Details", new { id = item.Id })</td>
         </tr>
     }
 
