--- a/OctagonPlatform/Views/Partners/Delete.cshtml
+++ b/OctagonPlatform/Views/Partners/Delete.cshtml
@@ -1,5 +1,4 @@
 ﻿@model OctagonPlatform.Models.FormsViewModels.PartnerFormViewModel
-
 @{
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
@@ -10,14 +9,6 @@
 <h3 class="alert-warning">Are you sure you want to delete this?</h3>
 <div>
     <dl class="dl-horizontal">
-        <dt>
-            Parent
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Parent.BusinessName)
-        </dd>
-        
         <dt>
             Business Name
         </dt>
@@ -115,12 +106,15 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-group">
-            <input type="submit" value="Delete" class="btn btn-danger"/> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
         </div>
     }
 </div>
+
+
