--- a/OctagonPlatform/Views/Partners/Edit.cshtml
+++ b/OctagonPlatform/Views/Partners/Edit.cshtml
@@ -10,11 +10,9 @@
 {
     <p class="alert alert-danger">
         All fields are <strong>required.</strong>
+        @ViewBag.Error
+        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
     </p>
-    <p class="alert alert-danger">
-        <strong>@ViewBag.Error</strong>
-    </p>
-    <p>@Html.ValidationSummary(true, "", new { @class = "text-danger" })</p>
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
     <div class="form-group">
