--- a/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Partners.cshtml
@@ -19,7 +19,9 @@
                                        htmlAttributes: null
                                        )</li>
             </ul>
-            
+            <div class="form-group">
+                <input type="text" class="form-control" id="searchPartner" placeholder="Search" name="search" />
+            </div> 
         </div>
     </div>
 </nav>
@@ -49,10 +51,37 @@
             <td>@item.Mobile</td>
             <td>@item.Email</td>
             <td>@item.Status</td>
-            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id})</td>
-            <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id})
+            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                            linkText: "Edit",
+                                                            actionName: "Edit",
+                                                            controllerName: "Partners",
+                                                            routeValues: new
+                                                            {
+                                                                id = item.Id
+                                                            },
+                                                            htmlAttributes: null
+                                                            )</td>
+            <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                             linkText: "Delete",
+                                                             actionName: "Delete",
+                                                             controllerName: "Partners",
+                                                             routeValues: new
+                                                             {
+                                                                 id = item.Id
+                                                             },
+                                                             htmlAttributes: null
+                                                             )
                                                              </td>
-            
+            <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                linkText: "Details",
+                                                                actionName: "Details",
+                                                                controllerName: "Partners",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )</td>
         </tr>
     }
     </tbody>
