--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -1,1 +1,102 @@
-﻿<h2>Contacts</h2>
+﻿@model OctagonPlatform.Models.Terminal
+
+<h3>List Contacts</h3>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    @Html.ActionLink(
+                                       linkText: "Add Contact",
+                                       actionName: "Create",
+                                       controllerName: "TerminalContacts",
+                                       routeValues: new
+                                       {
+                                           terminalId = Model.Id
+                                       },
+                                       htmlAttributes: null
+                                       )
+            </li>
+
+
+        </ul>
+            <form class="navbar-form navbar-left form-group">
+                <div>
+                    <input type="text" id="searchTerminalContact" class="form-control" placeholder="Search" name="search">
+                </div>
+            </form>
+
+        </div>
+    </div>
+</nav>
+
+
+<p class="alert alert-danger">
+    <strong>@ViewBag.Error</strong>
+</p>
+<table class="table table-striped table-hover ">
+    <thead>
+    <tr>
+        <th>Terminal</th>
+        <th>Name</th>
+        <th>Last Name</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Addres</th>
+    </tr>
+    </thead>
+    <tbody id="listOfTerminalContacts">
+    @foreach (var item in Model.TerminalContacts)
+    {
+        <tr class="info">
+            <td>@item.TerminalId</td>
+            <td>@item.Name</td>
+            <td>@item.LastName</td>
+            <td>@item.Phone</td>
+            <td>@item.Email</td>
+            <td>@item.Address1</td>
+            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                            linkText: "Edit",
+                                                            actionName: "Edit",
+                                                            controllerName: "TerminalContacts",
+                                                            routeValues: new
+                                                            {
+                                                                id = item.Id
+                                                            },
+                                                            htmlAttributes: null
+                                                            )</td>
+            <td>
+                <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                             linkText: "Delete",
+                                                             actionName: "Delete",
+                                                             controllerName: "TerminalContacts",
+                                                             routeValues: new
+                                                             {
+                                                                 id = item.Id,
+                                                                 terminalId = Model.Id
+                                                             },
+                                                             htmlAttributes: null
+                                                             )
+            </td>
+            <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                linkText: "Details",
+                                                                actionName: "Details",
+                                                                controllerName: "TerminalContacts",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )</td>
+        </tr>
+    }
+
+</table>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/search")
+}
+
+
+
