creado un timeout="2880"  en Web.config

--- a/OctagonPlatform/Views/Partners/Details.cshtml
+++ b/OctagonPlatform/Views/Partners/Details.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h1>Partner @Model.BusinessName Overview</h1>
+<h2>Partner <strong class="alert-info">@Model.BusinessName</strong></h2>
 <br />
 <hr />
 <br />
