--- a/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/BankAccounts.cshtml
@@ -82,57 +82,87 @@
     <tbody id="listOfBA">
     @foreach (var item in Model.BankAccounts)
     {
-        <tr   class="active">
-            <td>
-                @Html.DisplayFor(modelItem => item.City.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Country.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Partner.BusinessName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.State.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NickName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RoutingNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AccountNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NameOnCheck)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FedTax)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Zip)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Phone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AccountType)
-            </td>
-            <td>
-                <i class="glyphicon glyphicon-edit"></i>@Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink("Delete", "Delete", new {id = item.Id})
-            </td>
-        </tr>
+        if (!item.Deleted)
+        {
+            <tr class="active">
+                <td>
+                    @Html.DisplayFor(modelItem => item.City.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Country.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Partner.BusinessName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.State.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NickName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RoutingNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AccountNumber)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NameOnCheck)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FedTax)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Zip)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Phone)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AccountType)
+                </td>
+                <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                linkText: "Edit",
+                                                                actionName: "Edit",
+                                                                controllerName: "BankAccount",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )</td>
+                <td><i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                 linkText: "Delete",
+                                                                 actionName: "Delete",
+                                                                 controllerName: "BankAccount",
+                                                                 routeValues: new
+                                                                 {
+                                                                     id = item.Id
+                                                                 },
+                                                                 htmlAttributes: null
+                                                                 )
+                </td>
+                <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                    linkText: "Details",
+                                                                    actionName: "Details",
+                                                                    controllerName: "BankAccount",
+                                                                    routeValues: new
+                                                                    {
+                                                                        id = item.Id
+                                                                    },
+                                                                    htmlAttributes: null
+                                                                    )</td>
+            </tr>
+        }
     }
     </tbody>
 </table>
