--- a/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
+++ b/OctagonPlatform/Views/Partners/Sections/Terminals.cshtml
@@ -47,58 +47,61 @@
 
     @foreach (var item in Model.Terminals)
     {
-        <tr class="active">
-            <td>@item.Id</td>
-            <td>@item.Partner.BusinessName</td>
-            <td>@item.Address1</td>
-            <td>@item.Zip</td>
-            <td>@item.Phone</td>
-            <td>@item.Status</td>
-            <td>@item.Balance</td>
-            @if (item.LastTransactionId != null)
-            {
-                <td>@item.LastTransactionDate</td>
-                <td>@item.LastTransaction.TransactionType</td>
-            }
-            else
-            {
+        if (!item.Deleted)
+        {
+            <tr class="active">
+                <td>@item.Id</td>
+                <td>@item.Partner.BusinessName</td>
+                <td>@item.Address1</td>
+                <td>@item.Zip</td>
+                <td>@item.Phone</td>
+                <td>@item.Status</td>
+                <td>@item.Balance</td>
+                @if (item.LastTransactionId != null)
+                {
+                    <td>@item.LastTransactionDate</td>
+                    <td>@item.LastTransaction.TransactionType</td>
+                }
+                else
+                {
+                    <td>
+                    </td>
+                    <td></td>
+                }
+                <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
+                                                                linkText: "Edit",
+                                                                actionName: "Edit",
+                                                                controllerName: "Terminals",
+                                                                routeValues: new
+                                                                {
+                                                                    id = item.Id
+                                                                },
+                                                                htmlAttributes: null
+                                                                )</td>
                 <td>
-                </td>
-                <td></td>
-            }
-            <td><i class="glyphicon glyphicon-edit"></i>@Html.ActionLink(
-                                                             linkText: "Edit",
-                                                             actionName: "Edit",
-                                                             controllerName: "Terminals",
-                                                             routeValues: new
-                                                             {
-                                                                 id = item.Id
-                                                             },
-                                                             htmlAttributes: null
-                                                             )</td>
-            <td>
-                <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
-                                                              linkText: "Delete",
-                                                              actionName: "Delete",
-                                                              controllerName: "Terminals",
-                                                              routeValues: new
-                                                              {
-                                                                  id = item.Id
-                                                              },
-                                                              htmlAttributes: null
-                                                              )
-            </td>
-            <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
-                                                                 linkText: "Details",
-                                                                 actionName: "Details",
+                    <i class="glyphicon glyphicon-trash"></i>@Html.ActionLink(
+                                                                 linkText: "Delete",
+                                                                 actionName: "Delete",
                                                                  controllerName: "Terminals",
                                                                  routeValues: new
                                                                  {
                                                                      id = item.Id
                                                                  },
                                                                  htmlAttributes: null
-                                                                 )</td>
-        </tr>
+                                                                 )
+                </td>
+                <td><i class="glyphicon glyphicon-eye-open"></i>@Html.ActionLink(
+                                                                    linkText: "Details",
+                                                                    actionName: "Details",
+                                                                    controllerName: "Terminals",
+                                                                    routeValues: new
+                                                                    {
+                                                                        id = item.Id
+                                                                    },
+                                                                    htmlAttributes: null
+                                                                    )</td>
+            </tr>
+        }
     }
     </tbody>
 
